Fix some layout spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,13 @@ body {
 .card__title {
   color: hsl(0, 0%, 100%);
   margin-bottom: 2rem;
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   font-weight: 600;
 }
 
 .card__description {
   color: hsla(0, 0%, 100%, 0.75);
-  margin-bottom: 3.6rem;
+  margin-bottom: 4rem;
   line-height: 1.5;
 }
 
@@ -87,8 +87,8 @@ body {
 
 .stat-heading {
   color: hsla(0, 0%, 100%);
-  margin-bottom: 6px;
-  font-size: 2.6rem;
+  margin-bottom: 10px;
+  font-size: 2rem;
   font-weight: 600;
 }
 
@@ -96,6 +96,7 @@ body {
   text-transform: uppercase;
   font-family: "Lexend Deca", sans-serif;
   color: hsla(0, 0%, 100%, 0.6);
+  font-size: 1.4rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -105,11 +106,6 @@ body {
     min-width: 700px;
     max-width: 800px;
     border-radius: 10px;
-  }
-
-  .card__image {
-    object-fit: cover;
-    /* object-position: center; */
   }
 
   .card__text-content {
@@ -122,9 +118,15 @@ body {
     flex-basis: 50%;
   }
 
+  .card__image {
+    /* object-fit: cover; */
+  }
+
   .card__title {
     font-size: 2.8rem;
+    margin-bottom: 3rem;
   }
+
   .card__description {
     margin-bottom: 5rem;
   }
